--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.ForegroundServicePlayMusic"
         tools:targetApi="31">
         <activity
+            android:name=".MusicPlayerActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -27,10 +30,10 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".MusicPlayerService"
+        <service
+            android:name=".MusicPlayerService"
             android:foregroundServiceType="mediaPlayback"
             tools:ignore="Instantiatable" />
-
     </application>
 
 </manifest>
